escalamientoDebil/slurm_error_2013_18.txt
awk: cmd. line:1: {print $1, $2/0.023, $2/0.023/}
awk: cmd. line:1:                               ^ syntax error
  File "/home/zbarreto/Documents/IntroHPC_MFEM/escalamientoDebil/plot.py", line 65
    output_directory = /home/zbarreto/Documents/IntroHPC_MFEM/escalamientoDebil/Gráficos/
                       ^
SyntaxError: invalid syntax
rm: cannot remove 'times*': No such file or directory
rm: cannot remove 'mesh*': No such file or directory
rm: cannot remove 'sol*': No such file or directory
